Changelog
=========

1.0.1 (unreleased)
------------------

- Nothing changed yet.


1.0.0 (2024-06-13)
------------------

* Initial release